chore: bump versions, require Java 17 for the build